<resources>
    <string name="app_name">Mpishi</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="app_id">388690338005697</string>
    <string name="title_activity_splash">Mpishi</string>
    <string name="title_activity_login">Login</string>
    <string name="how_it_works">Swipe Left or Right</string>
    <string name="how_it_works2">To see next recipe</string>
    <string name="how_it_works3">NEXT</string>
    <string name="how_it_works4">Mpishi helps you contribute and share recipes with other Mpishi users</string>
    <string name="how_it_works5">OK GOT IT</string>
    <string name="btn1">Submit</string>
    <string name="textview1">Forgot your Password?</string>
    <string name="btn2">Latest Recipes</string>
    <string name="btn3">Browse</string>
    <string name="title_activity_how_it_works1">How_it_works1</string>
    <string name="title_activity_how_it_works2">How_it_works2</string>
</resources>
