<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:src="@drawable/menu"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="185dp" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:text="@string/btn1"
        android:id="@+id/button"
        android:layout_marginTop="5px"
        android:layout_above="@+id/button3"
        android:background="@color/com_facebook_blue"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:text="@string/btn2"
        android:id="@+id/button3"
        android:background="@color/com_facebook_blue"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="5px"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:text="@string/btn3"
        android:background="@color/accent_material_light"
        android:id="@+id/button2"
        android:layout_above="@+id/button"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
