<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_howItworks"
    tools:context="ian.theninja.mpishi.How_it_works1">


    <ImageView
        android:layout_width="360dp"
        android:layout_height="200dp"
        android:id="@+id/imageView"
        android:src="@drawable/swipe"
        android:layout_marginTop="49dp"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/imageButton"
        android:layout_alignStart="@+id/imageButton" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/how_it_works"
        android:textSize="28dp"
        android:id="@+id/textView"
        android:layout_marginTop="49dp"
        android:textStyle="bold"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/how_it_works2"
        android:id="@+id/textView2"
        android:textSize="24dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />

    <ImageButton
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:id="@+id/imageButton"
        android:src="@drawable/btnbelow"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/how_it_works3"
        android:textSize="32sp"
        android:id="@+id/textView3"
        android:textStyle="normal"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/textView2"
        android:layout_toEndOf="@+id/textView2" />


</RelativeLayout>
